--- a/Maui/SimpleWeather.Maui/Preferences/Settings_OSSLibs.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_OSSLibs.xaml
@@ -3,7 +3,24 @@
     x:Class="SimpleWeather.Maui.Preferences.Settings_OSSLibs"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="Settings_OSSLibs">
+    xmlns:controls="clr-namespace:SimpleWeather.Controls;assembly=SimpleWeather.Shared"
+    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    xmlns:m="clr-namespace:SimpleWeather.Maui.MarkupExtensions"
+    xmlns:mac="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.macOSSpecific;assembly=Microsoft.Maui.Controls"
+    xmlns:prefs="clr-namespace:SimpleWeather.Maui.Preferences;assembly=SimpleWeather.Maui"
+    xmlns:radar="clr-namespace:SimpleWeather.NET.Radar"
+    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:settings="clr-namespace:SimpleWeather.Preferences;assembly=SimpleWeather.Shared"
+    xmlns:system="using:System"
+    xmlns:utils="clr-namespace:SimpleWeather.Utils;assembly=SimpleWeather.Shared"
+    Title="{x:Static res_strings:Resources.pref_title_oslibs}"
+    BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
+                                      Dark={StaticResource DarkBackground}}"
+    Shell.NavBarIsVisible="True">
+    <Shell.BackButtonBehavior>
+        <BackButtonBehavior IsVisible="True" />
+    </Shell.BackButtonBehavior>
+
     <ScrollView Orientation="Vertical">
         <VerticalStackLayout>
             <Label Padding="16,8" TextType="Html">
