--- a/Maui/SimpleWeather.Maui/Main/AppShell.xaml
+++ b/Maui/SimpleWeather.Maui/Main/AppShell.xaml
@@ -6,9 +6,12 @@
     xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:local="clr-namespace:SimpleWeather.Maui.Main"
+    xmlns:appbar="clr-namespace:SimpleWeather.Maui.Controls.AppBar"
     xmlns:maticons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:settings="clr-namespace:SimpleWeather.Maui.Preferences"
+    xmlns:simpleShell="clr-namespace:SimpleToolkit.SimpleShell;assembly=SimpleToolkit.SimpleShell"
+    xmlns:simpleControls="clr-namespace:SimpleToolkit.SimpleShell.Controls"
     xmlns:viewModels="clr-namespace:SimpleWeather.Maui.ViewModels"
     xmlns:win="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.WindowsSpecific;assembly=Microsoft.Maui.Controls"
     Shell.BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
@@ -26,34 +29,96 @@
     Shell.UnselectedColor="{AppThemeBinding Light={StaticResource LightOnSurface},
                                             Dark={StaticResource DarkOnSurface}}"
     Shell.ForegroundColor="{AppThemeBinding Light={StaticResource LightOnBackground},
-                                            Dark={StaticResource DarkOnBackground}}">
+                                            Dark={StaticResource DarkOnBackground}}"
+    x:Name="_Shell"
+    x:FieldModifier="private">
 
-    <TabBar x:Name="ShellTabBar">
-        <ShellContent
-            Title="{x:Static res_strings:Resources.label_nav_weathernow}"
-            ContentTemplate="{DataTemplate local:WeatherNow}"
-            Icon="{FileImageSource File='full_sun.png'}"
-            Route="weather" />
-        <ShellContent
-            Title="{x:Static res_strings:Resources.label_nav_alerts}"
-            ContentTemplate="{DataTemplate local:WeatherAlertPage}"
-            Icon="{FileImageSource File='ic_error.png'}"
-            Route="alerts" />
-        <ShellContent
-            Title="{x:Static res_strings:Resources.label_radar}"
-            ContentTemplate="{DataTemplate local:WeatherRadarPage}"
-            Icon="{FileImageSource File='ic_radar.png'}"
-            Route="radar" />
-        <ShellContent
-            Title="{x:Static res_strings:Resources.label_nav_locations}"
-            ContentTemplate="{DataTemplate local:LocationsPage}"
-            Icon="{FileImageSource File='ic_star_border.png'}"
-            Route="locations" />
-        <ShellContent
-            Title="{x:Static res_strings:Resources.title_activity_settings}"
-            ContentTemplate="{DataTemplate settings:Settings_General}"
-            Icon="{FileImageSource File='ic_settings.png'}"
-            Route="settings" />
-    </TabBar>
+    <Shell.Resources>
+        <Style x:Key="AppShellTabBar" TargetType="simpleControls:TabBar">
+            <Setter Property="IconColor" Value="{AppThemeBinding Light={StaticResource LightOnSurface},
+                                                                 Dark={StaticResource DarkOnSurface}}"/>
+            <Setter Property="IconSelectionColor" Value="{AppThemeBinding Light={StaticResource LightPrimary},
+                                                                          Dark={StaticResource DarkPrimary}}"/>
+            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LightOnSurface},
+                                                                 Dark={StaticResource DarkOnSurface}}"/>
+            <Setter Property="TextSelectionColor" Value="{AppThemeBinding Light={StaticResource LightPrimary},
+                                                                          Dark={StaticResource DarkPrimary}}"/>
+            <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource LightSurface},
+                                                                  Dark={StaticResource DarkSurface}}"/>
+            <Setter Property="PrimaryBrush" Value="{AppThemeBinding Light={StaticResource LightPrimary},
+                                                                    Dark={StaticResource DarkPrimary}}"/>
+            <Setter Property="DesignLanguage" Value="{OnIdiom Phone='Material3', Default='Fluent'}"/>
+        </Style>
+    </Shell.Resources>
+
+    <!-- Default content -->
+    <ShellContent ContentTemplate="{DataTemplate local:WeatherNow}" />
+
+    <simpleShell:SimpleShell.Content>
+        <Grid x:Name="MainGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <appbar:AppBar
+                x:Name="ShellAppBar"
+                Grid.Row="0"
+                BarBackgroundColor="{AppThemeBinding Light={StaticResource LightSurface},
+                                                     Dark={StaticResource DarkSurface}}"
+                BarTextColor="{AppThemeBinding Light={StaticResource LightPrimary},
+                                               Dark={StaticResource DarkPrimary}}"
+                BorderColor="{AppThemeBinding Light={StaticResource LightOutline},
+                                              Dark={StaticResource DarkOutline}}"
+                BorderHeight="{OnPlatform iOS=1, MacCatalyst=1, Default=0}"
+                BackButtonVisible="False"
+                BackTapped="ShellAppBar_BackTapped"
+                Title="{x:Static res_strings:Resources.app_name}" />
+
+            <simpleShell:SimpleNavigationHost Grid.Row="1" />
+
+            <simpleControls:TabBar
+                x:Name="ShellTabBar"
+                Grid.Row="2"
+                ItemsAlignment="Center"
+                IsScrollable="False"
+                SelectedItem="{Binding Source={x:Reference _Shell}, Path=CurrentShellContent}" 
+                ItemSelected="ShellTabBar_ItemSelected"
+                ShowButtonWhenMoreItemsDoNotFit="True"
+                ShowMenuOnMoreButtonClick="True"
+                Style="{StaticResource AppShellTabBar}">
+                <simpleControls:TabBar.Items>
+                    <x:Array Type="{x:Type BaseShellItem}">
+                        <ShellContent
+                            Title="{x:Static res_strings:Resources.label_nav_weathernow}"
+                            ContentTemplate="{DataTemplate local:WeatherNow}"
+                            Icon="{maticons:MaterialIcon Symbol=LightMode, Size=24}"
+                            Route="weather" />
+                        <ShellContent
+                            Title="{x:Static res_strings:Resources.label_nav_alerts}"
+                            ContentTemplate="{DataTemplate local:WeatherAlertPage}"
+                            Icon="{maticons:MaterialIcon Symbol=Error, Size=24}"
+                            Route="alerts" />
+                        <ShellContent
+                            Title="{x:Static res_strings:Resources.label_radar}"
+                            ContentTemplate="{DataTemplate local:WeatherRadarPage}"
+                            Icon="{maticons:MaterialIcon Symbol=Radar, Size=24}"
+                            Route="radar" />
+                        <ShellContent
+                            Title="{x:Static res_strings:Resources.label_nav_locations}"
+                            ContentTemplate="{DataTemplate local:LocationsPage}"
+                            Icon="{maticons:MaterialIcon Symbol=StarBorder, Size=24}"
+                            Route="locations" />
+                        <ShellContent
+                            Title="{x:Static res_strings:Resources.title_activity_settings}"
+                            ContentTemplate="{DataTemplate settings:Settings_General}"
+                            Icon="{maticons:MaterialIcon Symbol=Settings, Size=24}"
+                            Route="settings" />
+                    </x:Array>
+                </simpleControls:TabBar.Items>
+            </simpleControls:TabBar>
+        </Grid>
+    </simpleShell:SimpleShell.Content>
 
 </viewModels:ViewModelShell>
