--- a/Maui/SimpleWeather.Maui/Radar/RadarToolbar.xaml
+++ b/Maui/SimpleWeather.Maui/Radar/RadarToolbar.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
     x:Class="SimpleWeather.Maui.Radar.RadarToolbar"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -26,10 +26,13 @@
             <ImageButton
                 x:Name="PlayButton"
                 Grid.Column="0"
+                BackgroundColor="{AppThemeBinding Light={StaticResource LightPrimary}, Dark={StaticResource DarkPrimary}}"
+                CornerRadius="8"
+                Padding="8"
                 Clicked="PlayButton_Clicked"
                 VerticalOptions="Center">
                 <ImageButton.Source>
-                    <matIcons:MaterialIcon Symbol="Play" />
+                    <matIcons:MaterialIcon Symbol="Play" Size="24" />
                 </ImageButton.Source>
             </ImageButton>
             <Slider
